--- a/accelnet-jupyternotebooks-dimensionality-fig1.ipynb
+++ b/accelnet-jupyternotebooks-dimensionality-fig1.ipynb
@@ -21,7 +21,7 @@
     "Please note that we have created a separate .py file (accelnetfunctions.py) consisting of the functions which are used throughout the code.\n",
     "\n",
     "<div>\n",
-    "<img src=\"attachment:UBC%20circuits%20cluster%20logo.png\" width=\"132\" height=\"132\"/>\n",
+    "<img src=\"attachment:UBC%20circuits%20cluster%20logo.png/" width=\"132\" height=\"132\"\>\n",
     "</div>"
    ]
   },
